src/assets/stylesheets/application/_info.scss
$padding-left-items: 25px;

.info-container {
  background-color: #f8f8f8;
  margin-bottom: 20px;
  margin-left: -#{ $desktop-indent };
  margin-right: -#{ $desktop-indent };
  padding-bottom: #{ $desktop-indent };
  padding-left: #{ $desktop-indent };
  padding-right: #{ $desktop-indent };
  padding-top: #{ $desktop-indent };

  @media screen and (max-width: $tablet-width) {
    margin-left: -#{ $tablet-indent };
    margin-right: -#{ $tablet-indent };
    padding-left: #{ $tablet-indent };
    padding-right: #{ $tablet-indent };
  }

}
.info {
  color: #000;

  .ballots & {
    background-position: 0 7px;
    background-repeat: no-repeat;
    color: #333333;
    font-size: 14px;
    font-weight: normal;
    letter-spacing: normal;
    line-height: 1.71;
    margin-bottom: 20px;
    max-width: 100%;
    min-height: 32px;
    padding-left: 30px;
    text-align: left;
    word-break: break-all;

    &:last-child {
      margin-bottom: 0;
    }

    &-minimum {
      background-image: url('#{ $base-images-path }/icons/icon-min.svg');
      background-size: 18px 18px;
    }
    &-details {
      background-image: url('#{ $base-images-path }/icons/icon-info.svg');
      background-size: 10px 18px;
      position: relative;
      &.collapsed {
        height: 90px;
        overflow: hidden;
      }

      .toggle-show {
        color: #333;
        cursor: pointer;
        display: inline-block;
        margin-left: 5px;
      }
    }

  }

  .new-form & {
    padding: 30px;
  }

  &-title {
    color: $gray-text-color;
    font-size: 16px;
    font-weight: 400;
    margin-bottom: 30px;
    padding-left: 25px;
    position: relative;

    &:before {
      background-image: url('#{ $base-images-path }/icons/icon-info.svg');
      background-position: 50% 50%;
      background-repeat: no-repeat;
      background-size: 10px 18px;
      content: '';
      height: 32px;
      left: 0;
      position: absolute;
      top: 50%;
      transform: translateY(-50%);
      width: 10px;
    }
  }

  &-i {
    color: #777;
    font-size: 14px;
    line-height: 1.71;
    margin-bottom: 20px;
    padding-left: $padding-left-items;
    position: relative;

    &:before {
      $circle-dimensions: 6px;

      background-color: #333;
      border-radius: 50%;
      content: '';
      height: $circle-dimensions;
      left: 0;
      position: absolute;
      top: 8px;
      width: $circle-dimensions;
    }
  }
}

